<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTimer1"
        android:layout_width="250dp"
        android:layout_height="101dp"
        android:layout_marginBottom="150dp"
        android:paddingVertical="15dp"
        android:text="@string/timer_head"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="250dp"
        android:layout_height="101dp"
        android:layout_marginBottom="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/_00_00_00"
        android:textAlignment="center"
        android:paddingVertical="15dp"
        android:textSize="50sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="96dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#A863FF"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#A863FF"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:backgroundTint="#A863FF"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>